--- a/app/globals.css
+++ b/app/globals.css
@@ -12,16 +12,16 @@ html::-webkit-scrollbar {
 }
 
 body {
-  background-color: #FFFFFF;
-  color: #0A0A0A;
+  background-color: #000000;
+  color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 /* Selection */
 ::selection {
-  background-color: #0A0A0A;
-  color: #FFFFFF;
+  background-color: #FFFFFF;
+  color: #0A0A0A;
 }
 
 /* Open for work pulse dot */
